RESOLVED FIXED184489
Fix warning in HashTools.h for newer versions of clang
https://bugs.webkit.org/show_bug.cgi?id=184489
Summary Fix warning in HashTools.h for newer versions of clang
Ryosuke Niwa
Reported 2018-04-10 23:47:35 PDT
Fix build failures in newer versions of clang
Attachments
Fixes the build (1.40 KB, patch)
2018-04-10 23:48 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2018-04-10 23:48:57 PDT
Created attachment 337682 [details] Fixes the build
Ryosuke Niwa
Comment 2 2018-04-10 23:49:56 PDT
*** Bug 184479 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3 2018-04-11 01:57:46 PDT
Comment on attachment 337682 [details] Fixes the build Clearing flags on attachment: 337682 Committed r230518: <https://trac.webkit.org/changeset/230518>
WebKit Commit Bot
Comment 4 2018-04-11 01:57:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-04-11 01:58:17 PDT
Note You need to log in before you can comment on or make changes to this bug.