Fix warning in HashTools.h for newer versions of clang https://bugs.webkit.org/show_bug.cgi?id=184489

Reviewed by Alexey Proskuryakov.

Removed "register" storage class specififer as it has been deprecated in C++11.

* platform/HashTools.h:


Canonical link: https://commits.webkit.org/200043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230518 268f45cc-cd09-0410-ab3c-d52691b4dbfc